--- a/client-app/androidApp/platforms/android/res/xml/config.xml
+++ b/client-app/androidApp/platforms/android/res/xml/config.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.example.hello" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <name>Hello Cordova</name>
+    <name>LAM</name>
     <preference name="loglevel" value="DEBUG" />
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
@@ -14,13 +14,12 @@
     <feature name="Capture">
         <param name="android-package" value="org.apache.cordova.mediacapture.Capture" />
     </feature>
-    <name>HelloWorld</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+       Aplicación desarrollada para el Hospital Niño de Jesús
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="david.llamazares.juarez@gmail.com" href="http://cordova.io">
+        Yamaradas Team
     </author>
-    <content src="index.html" />
+    <content src="login.html" />
     <access origin="*" />
 </widget>
