--- a/client-app/androidApp/platforms/android/res/xml/config.xml
+++ b/client-app/androidApp/platforms/android/res/xml/config.xml
@@ -33,6 +33,6 @@
     <author email="dev@cordova.apache.org" href="http://cordova.io">
         Apache Cordova Team
     </author>
-    <content src="pages/3dSimulation.html" />
+    <content src="examples/captureVideo.html" />
     <access origin="*" />
 </widget>
