Preparada la subida de videos al servidor

--- a/client-app/androidApp/platforms/android/res/xml/config.xml
+++ b/client-app/androidApp/platforms/android/res/xml/config.xml
@@ -35,4 +35,7 @@
     </author>
     <content src="examples/captureVideo.html" />
     <access origin="*" />
+    <feature name="FileTransfer">
+        <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer" />
+    </feature>
 </widget>
