--- a/server-app/hospital.view/src/main/webapp/resources/css/generic.css
+++ b/server-app/hospital.view/src/main/webapp/resources/css/generic.css
@@ -1,11 +1,16 @@
 html {margin:0px; padding:0px;width:100%; height:100%; }
 body {width:100%; height:100%; font-size:0.9em; font-family:arial; background-color:#F2F1F1;margin:0px; padding:0px;}
 
-body.web {overflow:hidden; background-color:#CCFFCC;}
-body.web fieldset.login {border-radius: 10px; -webkit-border-radius: 10px; -moz-border-radius: 10px; width:280px; height:230px; padding: 10px 20px; position:absolute; left:50%; top:50%; margin-top:-100px; margin-left:-140px; background-color:#FFFFFF;}
-body.web fieldset.login span {display:block; width:100%}
-body.web fieldset.login input {width:100%;}
-body.web fieldset.login input.btn {width:138px;margin: 9px 0px 0px 2px;}
+body.web {overflow:hidden; background-color:#FFFFFF;}
+
+body.web form.login {width:320px; height:250px; position:absolute; left:50%; top:50%; margin-top:-125px; margin-left:-160px;}
+body.web form.login div {padding: 20px 20px 30px 20px; -webkit-border-radius: 30px; -moz-border-radius: 30px; border-radius: 30px; -webkit-box-shadow: 7px 7px 5px rgba(50, 50, 50, 0.75); -moz-box-shadow: 7px 7px 5px rgba(50, 50, 50, 0.75); box-shadow: 7px 7px 5px rgba(50, 50, 50, 0.75); background: rgb(96, 96, 101); background: -moz-linear-gradient(30deg, rgb(96, 96, 101) 30%, rgb(133, 140, 145) 70%); background: -webkit-linear-gradient(30deg, rgb(96, 96, 101) 30%, rgb(133, 140, 145) 70%); background: -o-linear-gradient(30deg, rgb(96, 96, 101) 30%, rgb(133, 140, 145) 70%); background: -ms-linear-gradient(30deg, rgb(96, 96, 101) 30%, rgb(133, 140, 145) 70%); background: linear-gradient(120deg, rgb(96, 96, 101) 30%, rgb(133, 140, 145) 70%);}
+body.web form.login img{width:150px; height:150px; position:absolute; left:50%; top:-20%}
+body.web form.login h2{text-shadow: 3px 3px 2px rgba(150, 150, 150, 1);}
+body.web form.login span {font-size:16px; width:100%;}
+body.web form.login input {width:100%;}
+body.web form.login input.btn {width:100px; margin: 9px 10px 0px 27px;}
+
 body.web div#header {overflow:hidden; background-image:url(../imgs/degradado_cabecera.png); background-repeat:repeat-x; height: 59px; position:absolute; top:0px; width:100%; color:#FFFFFF; padding-left:20px;}
 body.web div#header h3{margin-top:30px;margin-left:1000px; position:absolute;}
 body.web div#menu {background-color:#FFFFFF; position:absolute; top:60px; height:20px; width:100%; overflow:hidden;}
