Preparado la grabación y reproducción de vídeo correctamente

--- a/client-app/androidApp/platforms/android/res/xml/config.xml
+++ b/client-app/androidApp/platforms/android/res/xml/config.xml
@@ -35,5 +35,8 @@
     <feature name="FileTransfer">
         <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer" />
     </feature>
+    <feature name="VideoPlayer">
+        <param name="android-package" value="org.apache.cordova.videoplayer.VideoPlayer" />
+    </feature>
     <plugin name="Notification" value="org.apache.cordova.Notification"/>
 </widget>
